--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
   "name": "arclight-react",
-  "version": "1.0.1",
-  "description": "A collection of commonly used React.js components.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/broberts2/arclight-react.git"
-  },
-  "author": "Broc Roberts",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/broberts2/arclight-react/issues"
-  },
-  "homepage": "https://github.com/broberts2/arclight-react#readme",
+  "version": "1.0.7",
+  "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
-    "react-awesome-modal": "^2.0.5",
-    "react-bootstrap": "^1.0.0-beta.16"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/preset-react": "^7.7.4"
   }
 }
