--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.1.0",
+  "version": "1.2.4",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -11,9 +11,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
+    "radium": "^0.26.0",
+    "react": "^16.13.0",
+    "react-animations": "^1.0.0",
+    "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
+    "react-full-screen": "^0.2.4",
+    "react-particles-js": "^2.7.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
