--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.2.4",
+  "version": "1.2.9",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -14,13 +14,20 @@
     "radium": "^0.26.0",
     "react": "^16.13.0",
     "react-animations": "^1.0.0",
+    "react-apng": "^1.4.0",
+    "react-awesome-button": "^6.5.1",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar": "^2.19.2",
+    "react-countdown-circle-timer": "^2.3.7",
     "react-dom": "^16.12.0",
     "react-full-screen": "^0.2.4",
     "react-particles-js": "^2.7.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-spinners": "^0.9.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-vis": "^1.11.7",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
