--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "arclight-react",
-  "version": "1.3.5",
+  "version": "1.3.7",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "file-loader": "^4.2.0",
+    "font-awesome": "^4.7.0",
     "radium": "^0.26.0",
     "react": "^16.13.0",
     "react-animations": "^1.0.0",
@@ -23,18 +30,19 @@
     "react-dom": "^16.12.0",
     "react-full-screen": "^0.2.4",
     "react-particles-js": "^2.7.1",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "react-spinners": "^0.9.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-vis": "^1.11.7",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "rm -rf dist && mkdir dist &&  babel src/components -d dist --copy-files"
+    "publish": "rm -rf dist && mkdir dist && babel src/components -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -62,7 +70,7 @@
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
-    "css-loader": "^3.4.1",
-    "ts-loader": "^6.2.1"
+    "ts-loader": "^6.2.1",
+    "css-loader": "^3.4.1"
   }
 }
