--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.3.27",
+  "version": "1.3.28",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf build; react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "publish": "git add .; git commit -am 'new publish'; git push origin master; rm -rf dist && mkdir dist && babel src/components -d dist --copy-files; npm publish"
