--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.3.28",
+  "version": "1.3.29",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -34,6 +34,7 @@
     "react-spinners": "^0.9.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-vis": "^1.11.7",
+    "sfcookies": "^1.0.2",
     "styled-components": "^5.1.1",
     "webpack": "^4.42.0"
   },
