--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.3.32",
+  "version": "1.3.33",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -35,8 +35,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-vis": "^1.11.7",
     "sfcookies": "^1.0.2",
-    "styled-components": "^5.1.1",
-    "webpack": "^4.42.0"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
