--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.3.44",
+  "version": "1.3.45",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -42,7 +42,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "npm publish"
+    "win-npm-publish" : "git add . & git commit -am \"npm publish\" & git push origin master & rmdir /Q /S dist & mkdir dist & babel .\\src\\components -d .\\dist --copy-files & npm publish"
   },
   "eslintConfig": {
     "extends": "react-app"
