--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.3.45",
+  "version": "1.3.46",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -42,7 +42,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "win-npm-publish" : "git add . & git commit -am \"npm publish\" & git push origin master & rmdir /Q /S dist & mkdir dist & babel .\\src\\components -d .\\dist --copy-files & npm publish"
+    "win-npm-publish": "git add . & git commit -am \"npm publish\" & git push origin master & rmdir /Q /S dist & mkdir dist & babel .\\src\\components -d .\\dist --copy-files & npm publish"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -70,7 +70,8 @@
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "css-loader": "^3.4.1",
     "ts-loader": "^6.2.1",
-    "css-loader": "^3.4.1"
+    "url-loader": "^4.1.1"
   }
 }
