--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arclight-react",
-  "version": "1.3.54",
+  "version": "1.3.55",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "babel-plugin-transform-require-default": "^0.1.6",
     "file-loader": "^4.2.0",
     "font-awesome": "^4.7.0",
     "radium": "^0.26.0",
