--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arclight-react",
   "version": "1.3.57",
   "private": false,
-  "main": "dist/index.js",
+  "main": "src\\components\\index.js",
   "dependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
@@ -21,10 +21,11 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.1.0",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.0-beta.6",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-plugin-transform-require-default": "^0.1.6",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -93,7 +94,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "win-npm-publish": "git add . & git commit -am \"npm publish\" & git push origin master & rmdir /Q /S dist & mkdir dist & set BABEL_ENV=production babel .\\src\\components -d .\\dist --copy-files & npm publish"
+    "win-npm-publish": "set NODE_ENV=development babel src\\components --out-dir dist",
+    "testy" : "set NODE_ENV=development babel --presets env src/components --out-dir dist"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -116,7 +118,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
     "@babel/preset-react": "^7.7.4",
     "css-loader": "^3.4.1",
     "ts-loader": "^6.2.1",
