--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "arclight-react",
-  "version": "1.3.57",
+  "version": "1.3.58",
   "private": false,
-  "main": "src\\components\\index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
@@ -95,7 +95,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "win-npm-publish": "set NODE_ENV=development babel src\\components --out-dir dist",
-    "testy" : "set NODE_ENV=development babel --presets env src/components --out-dir dist"
+    "testy": "NODE_ENV=development babel src/components -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
