--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "arclight-react",
-  "version": "1.3.58",
+  "version": "1.3.59",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
-    "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
@@ -22,7 +21,6 @@
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0-beta.6",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-plugin-transform-require-default": "^0.1.6",
     "babel-preset-env": "^1.7.0",
@@ -84,8 +82,6 @@
     "styled-components": "^5.1.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
-    "url-loader": "2.3.0",
-    "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
@@ -94,8 +90,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "win-npm-publish": "set NODE_ENV=development babel src\\components --out-dir dist",
-    "testy": "NODE_ENV=development babel src/components -d dist --copy-files"
+    "win-npm-publish": "git add . && git commit -am \"npm publish\" && git push origin master && rmdir /Q /S dist && mkdir dist && babel src/components -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -112,18 +107,16 @@
       "last 1 safari version"
     ]
   },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.2.2",
     "css-loader": "^3.4.1",
     "ts-loader": "^6.2.1",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack": "^4.42.0"
   },
   "jest": {
     "roots": [
